// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: contact-form > variation 1 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-button><span>Send message</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: contact-form > variation 2 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-button><span>Submit</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: contact-form > variation 3 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-toggle></ag-toggle>
<ag-divider></ag-divider>
<ag-button><span>Get in touch</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: contact-form > variation 4 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-button><span>Send request</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: contact-form > variation 5 matches snapshot 1`] = `
"<h2>Contact Sales</h2>
<ag-badge><span>Responds in 24h</span></ag-badge>
<ag-divider></ag-divider>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-button><span>Send message</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: login-form > variation 1 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-toggle></ag-toggle>
<ag-button><span>Sign in</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: login-form > variation 2 matches snapshot 1`] = `
"<h2>Welcome back</h2>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-link><span>Forgot password?</span></ag-link>
<ag-button><span>Sign in</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: login-form > variation 3 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-divider></ag-divider>
<ag-button><span>Log in to your account</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: login-form > variation 4 matches snapshot 1`] = `
"<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-checkbox></ag-checkbox>
<ag-button><span>Create account</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: login-form > variation 5 matches snapshot 1`] = `
"<ag-badge><span>Secure login</span></ag-badge>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-input>
  <!---->
  <!---->
</ag-input>
<ag-toggle></ag-toggle>
<ag-button><span>Sign in</span></ag-button>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: pricing-card > variation 1 matches snapshot 1`] = `
"<ag-card>
  <ag-badge><span>Most popular</span></ag-badge>
  <h2>Pro plan</h2>
  <p>$12 / month</p>
  <ag-divider></ag-divider>
  <ag-button><span>Get started</span></ag-button>
</ag-card>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: pricing-card > variation 2 matches snapshot 1`] = `
"<ag-card>
  <h2>Starter</h2>
  <p>$5 / month</p>
  <p>Perfect for individuals and small projects</p>
  <ag-divider></ag-divider>
  <ag-button><span>Start free trial</span></ag-button>
</ag-card>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: pricing-card > variation 3 matches snapshot 1`] = `
"<ag-card>
  <ag-badge><span>Enterprise</span></ag-badge>
  <h2>Custom pricing</h2>
  <p>Contact us</p>
  <ag-divider></ag-divider>
  <ag-button><span>Talk to sales</span></ag-button>
</ag-card>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: pricing-card > variation 4 matches snapshot 1`] = `
"<ag-card>
  <ag-badge><span>Save 20%</span></ag-badge>
  <h2>Annual plan</h2>
  <p>$99 / year</p>
  <p>Billed annually — that's $8.25/mo</p>
  <ag-divider></ag-divider>
  <ag-button><span>Get annual plan</span></ag-button>
</ag-card>"
`;

exports[`AgDynamicRenderer Vue — golden snapshots > workflow: pricing-card > variation 5 matches snapshot 1`] = `
"<ag-card>
  <h2>Team plan</h2>
  <p>$8 / user / month</p>
  <p>Minimum 5 seats — scales as your team grows</p>
  <ag-divider></ag-divider>
  <ag-button><span>Start team trial</span></ag-button>
  <ag-button><span>View all plans</span></ag-button>
</ag-card>"
`;
